@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
 
-<project name="Drawing" basedir="." default="Addon.test">
+<project name="LearnPen" basedir="." default="Addon.test">
     <import file="../tools/targets.xml" />
 </project>
